moving cv files to cv folder

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="image/avatar.png" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <link href="css/all.css" rel="stylesheet" />
+    <link rel="icon" href="cv/image/avatar.png" />
+    <link rel="stylesheet" href="cv/css/bootstrap.min.css" type="text/css" />
+    <link href="cv/css/all.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="cv/css/style.css" type="text/css" />
     <!-- <title>&lt;Cody Here&nbsp;&sol;&gt;</title> -->
   </head>
 
@@ -66,7 +66,7 @@
 
           <div class="profile-image-wrapper mx-auto mb-3">
             <img
-              src="image/4.JPG"
+              src="cv/image/4.JPG"
               alt="profile-image"
               class="profile-image img-fluid rounded-circle img-thumbnail"
             />
@@ -226,17 +226,19 @@
               <div class="infomation-paragraph">
                 <ul>
                   <li>
-                    Áp dụng kiến thức đã học vào các dự án thực tế, hoàn thành
-                    công việc được phân công.
+                    Áp dụng kiến thức đã học vào các dự án thực tế, trở thành
+                    lập trình viên Front End chuyên nghiệp, xây dựng những dự án
+                    của công ty.
                   </li>
 
                   <li>
-                    Học hỏi, nâng cao kinh nghiệm làm việc của bản thân.
+                    Trong 1 năm sắp tới sẽ tập trung chủ yếu vào lập trình Front
+                    End và các framework UI như React, Vue, Angular.
                   </li>
 
                   <li>
-                    Tiếp tục học tập và phát triển kĩ năng về front-end cũng như
-                    các thư viện, framework liên quan.
+                    Sau đó sẽ tiếp tục học thêm về backend để có thể phát triển,
+                    đảm nhận nhiều công việc hơn trong công ty.
                   </li>
                 </ul>
               </div>
@@ -353,7 +355,7 @@
 
               <div class="infomation-paragraph">
                 <h4 class="h4 sub-title">
-                  4/2019 - 9/2019: Techmaster Việt Nam - Thực tập Sinh
+                  4/2019 - 9/2019: Techmaster Việt Nam - Thực Tập Sinh
                 </h4>
 
                 <ul>
@@ -393,7 +395,7 @@
                 01.
               </div>
               <img
-                src="image/calculator.png"
+                src="cv/image/calculator.png"
                 alt="calculator"
                 class="project-img img-fluid my-5"
               />
@@ -424,14 +426,14 @@
                 <div class="card">
                   <div class="front">
                     <img
-                      src="image/back.png"
+                      src="cv/image/back.png"
                       alt="front-card"
                       class="project-img img-fluid"
                     />
                   </div>
                   <div class="back">
                     <img
-                      src="image/c1.jpg"
+                      src="cv/image/c1.jpg"
                       alt="c1-card"
                       class="project-img img-fluid"
                     />
@@ -462,7 +464,7 @@
                 03.
               </div>
               <img
-                src="image/animation_card.png"
+                src="cv/image/animation_card.png"
                 alt="login_register_form"
                 class="project-img project-img-four img-fluid my-5 rounded-lg"
               />
@@ -488,7 +490,7 @@
                 04.
               </div>
               <img
-                src="image/login_register_form.png"
+                src="cv/image/login_register_form.png"
                 alt="login_register_form"
                 class="project-img project-img-three img-fluid my-5 rounded-lg"
               />
@@ -516,7 +518,7 @@
                 05.
               </div>
               <img
-                src="image/kanban.png"
+                src="cv/image/kanban.png"
                 alt="kanban"
                 class="project-img project-img-five img-fluid my-5 rounded-lg"
               />
@@ -545,7 +547,7 @@
               </div>
               <div class="image-wrapper my-5 rounded-lg">
                 <img
-                  src="image/obo.png"
+                  src="cv/image/obo.png"
                   alt="kanban"
                   class="project-img project-img-six img-fluid"
                 />
@@ -576,7 +578,7 @@
                 07.
               </div>
               <img
-                src="image/react-quiz.png"
+                src="cv/image/react-quiz.png"
                 alt="Javascript Quizzes"
                 class="project-img project-img-five img-fluid my-5 rounded-lg"
               />
@@ -604,7 +606,7 @@
                 08.
               </div>
               <img
-                src="image/crwn-clothings.png"
+                src="cv/image/crwn-clothings.png"
                 alt="Crwn Clothings"
                 class="project-img project-img-eight img-fluid my-5 rounded-lg"
               />
@@ -630,11 +632,11 @@
         </div>
       </div>
     </section>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="cv/js/jquery-3.4.1.min.js"></script>
+    <script src="cv/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    <script src="js/main.js"></script>
+    <script src="cv/js/main.js"></script>
   </body>
 </html>
