update menu, menu togger button

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <section class="container-fluid position-relative">
       <div class="row">
         <div id="first-part" class="col-lg-6 h-100 fixed-position">
-          <nav
-            class="navbar navbar-expand-xl navbar-light bg-light justify-content-end"
-          >
+          <nav class="navbar  navbar-light bg-light justify-content-end">
             <button
               class="navbar-toggler"
               type="button"
