--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
     <link rel="stylesheet" href="cv/css/style.css" type="text/css" />
-    <!-- <title>&lt;Cody Here&nbsp;&sol;&gt;</title> -->
+    <title>&lt;Cody Here&nbsp;&sol;&gt;</title>
   </head>
 
   <body>
