Cv:  Update experience

--- a/index.html
+++ b/index.html
@@ -134,10 +134,6 @@
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold">Giới tính:</span> Nam.
-                  </li>
-
-                  <li>
                     <span class="label font-weight-bold">Điện thoại:</span>
                     0365304675.
                   </li>
@@ -148,8 +144,8 @@
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold">Địa chỉ:</span> 38/211
-                    Khương Trung, Thanh Xuân, Hà Nội.
+                    <span class="label font-weight-bold">Địa chỉ:</span> Thanh
+                    Xuân, Hà Nội.
                   </li>
                 </ul>
               </div>
@@ -213,21 +209,28 @@
               <div class="infomation-paragraph">
                 <ul>
                   <li>
-                    Áp dụng kiến thức đã học vào các dự án thực tế, trở thành
-                    lập trình viên Front End chuyên nghiệp, xây dựng những dự án
-                    của công ty.
+                    <p>
+                      Áp dụng kiến thức đã học vào các dự án thực tế, trở thành
+                      lập trình viên Front End chuyên nghiệp, xây dựng những dự
+                      án của công ty.
+                    </p>
                   </li>
 
                   <li>
-                    Phát triển website/mobile app bằng kiến thức đã có về
-                    Javascript, ReactJs, React Native hoặc tuỳ theo stack công
-                    nghệ mà công ty đang sử dụng.
+                    <p>
+                      Phát triển website/mobile app bằng kiến thức đã có về
+                      Javascript, ReactJs, React Native hoặc tuỳ theo stack công
+                      nghệ mà công ty đang sử dụng.
+                    </p>
                   </li>
 
                   <li>
-                    Tiếp tục trau dồi thêm kỹ năng, kiến thức về các mảng khác
-                    trong lập trình như backend, devops để có thể đảm nhận được
-                    nhiều công việc, mang lại nhiều giá trị hơn cho công ty.
+                    <p>
+                      Tiếp tục trau dồi thêm kỹ năng, kiến thức về các mảng khác
+                      trong lập trình như backend, devops để có thể đảm nhận
+                      được nhiều công việc, mang lại nhiều giá trị hơn cho công
+                      ty.
+                    </p>
                   </li>
                 </ul>
               </div>
@@ -355,19 +358,20 @@
                       Front end developer.
                     </p>
                     <p>
-                      Tham gia phát triển sản phẩm Jobmatching từ thời điểm bắt
-                      đầu lên ý tưởng là tháng 12/2019 đến thời điểm nghỉ việc
-                      là 09/2020. Sau 2 tháng với tần suất làm việc lớn, vào
-                      2/2020 sản phẩm đã được tung ra thị trường và tiếp tục
-                      được phát triển, nâng cấp tới nay đã có được trên 1500
-                      user sử dụng thường xuyên. Sản phẩm cũng đã bắt đầu thu
-                      được phí sử dụng hàng tháng từ user.
+                      Tham gia phát triển Jobmatching từ tháng 12/2019 - thời
+                      điểm bắt đầu xây dựng platform đến khi nghỉ việc là
+                      09/2020. Sau 2 tháng với tần suất làm việc lớn, vào 2/2020
+                      sản phẩm đã được tung ra thị trường và tiếp tục được phát
+                      triển, nâng cấp tới nay đã có được trên 1500 user sử dụng
+                      thường xuyên. Sản phẩm cũng đã bắt đầu thu được phí sử
+                      dụng hàng tháng từ user.
                     </p>
                     <p>
-                      Cụ thể: Làm việc cùng team từ các khâu như lên ý tưởng
-                      chức năng, thiết kế mockup, triển khai mockup thành giao
-                      diện, phối hợp cùng backend để định hướng và phát triển
-                      API theo từng chức năng.
+                      Cụ thể: Làm việc cùng team trong hầu hết các khâu phát
+                      triển Jobmatching như lên ý tưởng chức năng, thiết kế
+                      mockup, triển khai mockup thành giao diện, phối hợp, thảo
+                      luận cùng backend để định hướng và phát triển API theo
+                      từng chức năng.
                     </p>
                   </li>
                 </ul>
@@ -655,7 +659,7 @@
               >
               <div class="technology text-center text">
                 <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: ReactJs, Redux, Nodejs, Websocket.</p>
+                <p>Nền tảng: ReactJs, Redux, Nodejs, MongoDB, Websocket.</p>
               </div>
               <a href="https://quack-book.vercel.app/" class="overlay"></a>
             </div>
