--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               </div>
             </div>
 
-            <div class="infomation mt-3">
+            <!-- <div class="infomation mt-3">
               <h4 class="h4 sub-title">Tự nhận xét</h4>
 
               <div class="infomation-paragraph">
@@ -179,7 +179,7 @@
                   <li>Chịu được áp lực trong công việc.</li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
             <div class="infomation mt-3">
               <h4 class="h4 sub-title">Giải thưởng</h4>
@@ -188,8 +188,8 @@
                 <ul>
                   <li>
                     Giải nhất cuộc thi hackathon thiết kế website chủ đề bảo vệ
-                    môi trường - Create eco website for your environment
-                    campaign
+                    môi trường: Create eco website for your environment campaign
+                    cùng đội số 3.
                   </li>
                 </ul>
               </div>
@@ -227,9 +227,8 @@
                   <li>
                     <p>
                       Tiếp tục trau dồi thêm kỹ năng, kiến thức về các mảng khác
-                      trong lập trình như backend, devops để có thể đảm nhận
-                      được nhiều công việc, mang lại nhiều giá trị hơn cho công
-                      ty.
+                      trong lập trình để có thể đảm nhận được nhiều công việc,
+                      mang lại nhiều giá trị hơn cho công ty.
                     </p>
                   </li>
                 </ul>
@@ -308,15 +307,29 @@
 
                 <ul>
                   <li>
-                    <span class="label font-weight-bold">Dự án:</span>
-                    admin.jobmatching.vn
+                    <p>
+                      <span class="label font-weight-bold">Dự án:</span>
+                      Jobmatching
+                    </p>
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold">Mô tả dự án:</span>
-                    Jobmatching là tool/công cụ hỗ trợ cho các anh/chị/em sử
-                    dụng nền tảng Linkedin để làm việc. Jobmatching cung cấp 1
-                    số dịch vụ như:
+                    <p>
+                      <span class="label font-weight-bold">Website:</span>
+                      <a href="https://admin.jobmatching.vn/"
+                        >https://admin.jobmatching.vn</a
+                      >
+                    </p>
+                  </li>
+
+                  <li>
+                    <p>
+                      <span class="label font-weight-bold">Mô tả dự án:</span>
+                      Jobmatching là tool/công cụ hỗ trợ cho các anh/chị/em sử
+                      dụng nền tảng Linkedin để làm việc. Jobmatching cung cấp 1
+                      số dịch vụ như:
+                    </p>
+
                     <p>
                       - Kết nối tự động: Giúp mở rộng network nhanh chóng, hiệu
                       quả.
@@ -339,17 +352,21 @@
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold"
-                      >Công nghệ sử dụng:</span
-                    >
-                    ReactJs, Ant design, React Native, Nativebase.
+                    <p>
+                      <span class="label font-weight-bold"
+                        >Công nghệ sử dụng:</span
+                      >
+                      ReactJs, Ant design, React Native, Nativebase.
+                    </p>
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold"
-                      >Số lượng thành viên:</span
-                    >
-                    4.
+                    <p>
+                      <span class="label font-weight-bold"
+                        >Số lượng thành viên:</span
+                      >
+                      4.
+                    </p>
                   </li>
 
                   <li>
@@ -358,8 +375,8 @@
                       Front end developer.
                     </p>
                     <p>
-                      Tham gia phát triển Jobmatching từ tháng 12/2019 - thời
-                      điểm bắt đầu xây dựng platform đến khi nghỉ việc là
+                      - Tham gia phát triển Jobmatching trong 8 tháng từ 12/2019
+                      - thời điểm bắt đầu xây dựng platform đến khi nghỉ việc là
                       09/2020. Sau 2 tháng với tần suất làm việc lớn, vào 2/2020
                       sản phẩm đã được tung ra thị trường và tiếp tục được phát
                       triển, nâng cấp tới nay đã có được trên 1500 user sử dụng
@@ -367,11 +384,11 @@
                       dụng hàng tháng từ user.
                     </p>
                     <p>
-                      Cụ thể: Làm việc cùng team trong hầu hết các khâu phát
-                      triển Jobmatching như lên ý tưởng chức năng, thiết kế
-                      mockup, triển khai mockup thành giao diện, phối hợp, thảo
-                      luận cùng backend để định hướng và phát triển API theo
-                      từng chức năng.
+                      - Làm việc cùng team trong hầu hết các khâu phát triển
+                      Jobmatching như lên ý tưởng chức năng, thiết kế mockup,
+                      triển khai mockup thành giao diện, phối hợp, thảo luận
+                      cùng backend để định hướng và phát triển API theo từng
+                      chức năng.
                     </p>
                   </li>
                 </ul>
@@ -384,23 +401,36 @@
 
                 <ul>
                   <li>
-                    <span class="label font-weight-bold">Dự án:</span>
-                    techmaster.vn.
+                    <p>
+                      <span class="label font-weight-bold">Dự án:</span>
+                      Techmaster
+                    </p>
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold">Mô tả dự án:</span>
-                    Website cho phép học viên mua khoá học và học online, giảng
-                    viên có thể soạn giáo án qua khung giáo trình online. Các
-                    công ty IT có thể đăng tuyển tin tuyển dụng thông qua phần
-                    việc làm IT.
+                    <p>
+                      <span class="label font-weight-bold">Website:</span>
+                      <a href="https://techmaster.vn/">https://techmaster.vn</a>
+                    </p>
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold"
-                      >Số lượng thành viên:</span
-                    >
-                    4.
+                    <p>
+                      <span class="label font-weight-bold">Mô tả dự án:</span>
+                      Website cho phép học viên mua khoá học và học online,
+                      giảng viên có thể soạn giáo án qua khung giáo trình
+                      online. Các công ty IT có thể đăng tuyển tin tuyển dụng
+                      thông qua phần việc làm IT.
+                    </p>
+                  </li>
+
+                  <li>
+                    <p>
+                      <span class="label font-weight-bold"
+                        >Số lượng thành viên:</span
+                      >
+                      4.
+                    </p>
                   </li>
 
                   <li>
@@ -409,9 +439,9 @@
                       Fresher front end developer.
                     </p>
                     <p>
-                      Tham gia bảo trì, nâng cấp phần front end cho website. Lên
-                      giao diện và triển khai phần front end cho chức năng đăng
-                      tin tuyển dụng trên website hiện tại.
+                      - Tham gia bảo trì, nâng cấp phần front end cho website.
+                      Lên giao diện và triển khai phần front end cho chức năng
+                      đăng tin tuyển dụng trên website hiện tại.
                     </p>
                   </li>
                 </ul>
@@ -424,14 +454,18 @@
 
                 <ul>
                   <li>
-                    Học lập trình web từ cơ bản đến nâng cao cùng các kiến thức
-                    liên quan.
+                    <p>
+                      Học lập trình web từ cơ bản đến nâng cao cùng các kiến
+                      thức liên quan.
+                    </p>
                   </li>
 
                   <li>
-                    Làm dự án cá nhân để hiểu hơn về lập trình web và các ngôn
-                    ngữ, thư viện, framework phổ biến như HTML, CSS, Javascript,
-                    Jquery, ReactJs, ...
+                    <p>
+                      - Làm dự án cá nhân để hiểu hơn về lập trình web và các
+                      ngôn ngữ, thư viện, framework phổ biến như HTML, CSS,
+                      Javascript, Jquery, ReactJs, ...
+                    </p>
                   </li>
                 </ul>
               </div>
