--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div id="short-description" class="text text-center mx-4">
               <p>
                 Xin chào, mình là Phạm&nbsp;Công&nbsp;Định, một front-end
-                website developer đang học tập và sinh sống tại Hà Nội.
+                website developer đang làm việc và sinh sống tại Hà Nội.
               </p>
             </div>
             <div class="contact mb-3 mt-3 mw-100 container">
@@ -325,9 +325,9 @@
                   <li>
                     <p>
                       <span class="label font-weight-bold">Mô tả dự án:</span>
-                      Jobmatching là tool/công cụ hỗ trợ cho các anh/chị/em sử
-                      dụng nền tảng Linkedin để làm việc. Jobmatching cung cấp 1
-                      số dịch vụ như:
+                      Jobmatching là công cụ hỗ trợ user sử dụng nền tảng
+                      Linkedin để làm việc. Jobmatching cung cấp 1 số dịch vụ
+                      như:
                     </p>
 
                     <p>
@@ -347,7 +347,8 @@
                       ai trên Linkedin.
                     </p>
                     <p>
-                      - Quản lý hồ sơ: Giúp quản lý, nuôi nguồn hồ sơ, ứng viên.
+                      - Quản lý hồ sơ: Giúp cá nhân/tổ chức quản lý, nuôi nguồn
+                      hồ sơ, ứng viên.
                     </p>
                   </li>
 
