--- a/index.html
+++ b/index.html
@@ -272,14 +272,17 @@
                 <h4 class="h4 sub-title">Kỹ năng khác</h4>
 
                 <ul>
-                  <li>Có hiểu biết về git shell và github/gitlab.</li>
+                  <li>
+                    Có thể sử dụng các công cụ quản lý version phần mềm như git
+                    shell, github/gitlab.
+                  </li>
                   <li>
                     Có kinh nghiệm làm việc với Rest API và tool để tương tác
                     với API như Postman.
                   </li>
                   <li>
-                    Có khả năng sử dụng các công cụ quản lý công việc như:
-                    Trello, Jira, Gitea, ...
+                    Có thể sử dụng các công cụ quản lý công việc như: Trello,
+                    Jira, Gitea, ...
                   </li>
                   <li>Có thể đọc - hiểu tiếng Anh ở mức khá.</li>
                   <li>
@@ -302,7 +305,8 @@
             <div class="infomation mt-5">
               <div class="infomation-paragraph">
                 <h4 class="h4 sub-title">
-                  12/2019 - 9/2020: iHRSolution - Frontend Developer.
+                  12/2019 - 9/2020: Công ty cổ phần iHR Solution (trực thuộc
+                  công ty cổ phần Eway)
                 </h4>
 
                 <ul>
@@ -357,7 +361,8 @@
                       <span class="label font-weight-bold"
                         >Công nghệ sử dụng:</span
                       >
-                      ReactJs, Ant design, React Native, Nativebase.
+                      Html, Scss, BEM, ReactJs, Redux, Ant design, React Native,
+                      Nativebase.
                     </p>
                   </li>
 
@@ -380,16 +385,17 @@
                       - thời điểm bắt đầu xây dựng platform đến khi nghỉ việc là
                       09/2020. Sau 2 tháng với tần suất làm việc lớn, vào 2/2020
                       sản phẩm đã được tung ra thị trường và tiếp tục được phát
-                      triển, nâng cấp tới nay đã có được trên 1500 user sử dụng
+                      triển, nâng cấp tới nay đã có được hơn 1300 user sử dụng
                       thường xuyên. Sản phẩm cũng đã bắt đầu thu được phí sử
                       dụng hàng tháng từ user.
                     </p>
                     <p>
                       - Làm việc cùng team trong hầu hết các khâu phát triển
-                      Jobmatching như lên ý tưởng chức năng, thiết kế mockup,
-                      triển khai mockup thành giao diện, phối hợp, thảo luận
-                      cùng backend để định hướng và phát triển API theo từng
-                      chức năng.
+                      Jobmatching như lên ý tưởng chức năng, đánh giá chức năng
+                      theo nhu cầu thực tế của người dùng, thiết kế mockup, xây
+                      dựng trải nghiệm người dùng, triển khai mockup thành giao
+                      diện, phối hợp, thảo luận cùng backend để định hướng và
+                      phát triển API theo từng chức năng.
                     </p>
                   </li>
                 </ul>
@@ -397,7 +403,7 @@
 
               <div class="infomation-paragraph">
                 <h4 class="h4 sub-title">
-                  9/2019 - 12/2019: Techmaster Việt Nam - Fresher Developer.
+                  9/2019 - 12/2019: Techmaster Việt Nam
                 </h4>
 
                 <ul>
@@ -450,10 +456,16 @@
 
               <div class="infomation-paragraph">
                 <h4 class="h4 sub-title">
-                  4/2019 - 9/2019: Techmaster Việt Nam - Thực Tập Sinh
+                  4/2019 - 9/2019: Techmaster Việt Nam
                 </h4>
 
                 <ul>
+                  <li>
+                    <p>
+                      <span class="label font-weight-bold">Vai trò:</span>
+                      Thực tập sinh
+                    </p>
+                  </li>
                   <li>
                     <p>
                       Học lập trình web từ cơ bản đến nâng cao cùng các kiến
