--- a/index.html
+++ b/index.html
@@ -381,21 +381,20 @@
                       Front end developer.
                     </p>
                     <p>
-                      - Tham gia phát triển Jobmatching trong 8 tháng từ 12/2019
-                      - thời điểm bắt đầu xây dựng platform đến khi nghỉ việc là
-                      09/2020. Sau 2 tháng với tần suất làm việc lớn, vào 2/2020
-                      sản phẩm đã được tung ra thị trường và tiếp tục được phát
-                      triển, nâng cấp tới nay đã có được hơn 1300 user sử dụng
-                      thường xuyên. Sản phẩm cũng đã bắt đầu thu được phí sử
-                      dụng hàng tháng từ user.
+                      - Tham gia vào dự án Jobmatching từ thời điểm bắt đầu xây
+                      dựng platform. Sau 2 tháng với tần suất làm việc cao, vào
+                      2/2020 sản phẩm đã được tung ra thị trường và tiếp tục
+                      được phát triển, nâng cấp tới nay đã có được hơn 1300 user
+                      sử dụng thường xuyên. Sản phẩm cũng đã bắt đầu thu được
+                      phí sử dụng hàng tháng từ user.
                     </p>
                     <p>
                       - Làm việc cùng team trong hầu hết các khâu phát triển
                       Jobmatching như lên ý tưởng chức năng, đánh giá chức năng
                       theo nhu cầu thực tế của người dùng, thiết kế mockup, xây
                       dựng trải nghiệm người dùng, triển khai mockup thành giao
-                      diện, phối hợp, thảo luận cùng backend để định hướng và
-                      phát triển API theo từng chức năng.
+                      diện, phối hợp, thảo luận cùng backend để định hướng API
+                      theo từng chức năng.
                     </p>
                   </li>
                 </ul>
