--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                   <li>
                     <span class="label font-weight-bold">2016 - 2018:</span> Đại
                     học Thương Mại - Chuyên ngành Quản Trị Kinh Doanh.
+                    <p>GPA: 7.2/10</p>
                   </li>
                 </ul>
               </div>
