Cv: Update target blank project link

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </p>
                     <p>
                       - Tham gia vào dự án Jobmatching từ thời điểm bắt đầu xây
-                      dựng platform. Sau 2 tháng với tần suất làm việc cao, vào
+                      dựng sản phẩm. Sau 2 tháng với tần suất làm việc cao, vào
                       2/2020 sản phẩm đã được tung ra thị trường và tiếp tục
                       được phát triển, nâng cấp tới nay đã có được hơn 1300 user
                       sử dụng thường xuyên. Sản phẩm cũng đã bắt đầu thu được
@@ -509,6 +509,7 @@
               <a
                 href="https://cody0203.github.io/dom-projects/calculator-basics/"
                 class="project-link position-absolute"
+                target="_blank"
                 >Calculator</a
               >
               <div class="technology text-center text">
@@ -517,6 +518,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/dom-projects/calculator-basics/"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -543,6 +545,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/memory-card/index.html"
+                target="_blank"
                 class="project-link position-absolute"
                 >Marvel Memory Card</a
               >
@@ -552,6 +555,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/memory-card/index.html"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -565,6 +569,7 @@
               />
               <a
                 href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html"
+                target="_blank"
                 class="project-link position-absolute"
                 >Animation Greating Card</a
               >
@@ -574,6 +579,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -587,6 +593,7 @@
               />
               <a
                 href="https://cody0203.github.io/dom-projects/form/html/index.html"
+                target="_blank"
                 class="project-link position-absolute"
                 >Login/Register Form</a
               >
@@ -596,6 +603,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/dom-projects/form/html/index.html"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -609,6 +617,7 @@
               />
               <a
                 href="https://cody0203.github.io/kanban-project/"
+                target="_blank"
                 class="project-link position-absolute"
                 >Kanban board</a
               >
@@ -618,6 +627,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/kanban-project/"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -633,6 +643,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/obo-stadium/"
+                target="_blank"
                 class="project-link position-absolute"
                 >OBO Stadium <br /><span class="project-sub-title"
                   >(Static web page)</span
@@ -644,6 +655,7 @@
               </div>
               <a
                 href="https://cody0203.github.io/obo-stadium/"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -657,6 +669,7 @@
               />
               <a
                 href="https://react-quiz-8c392.firebaseapp.com/"
+                target="_blank"
                 class="project-link position-absolute"
                 >Javascript Quizzes</a
               >
@@ -666,6 +679,7 @@
               </div>
               <a
                 href="https://react-quiz-8c392.firebaseapp.com/"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -679,6 +693,7 @@
               />
               <a
                 href="https://crwn-clothings.congdinh2395.now.sh/"
+                target="_blank"
                 class="project-link position-absolute"
                 >Crwn Clothings</a
               >
@@ -688,6 +703,7 @@
               </div>
               <a
                 href="https://crwn-clothings.congdinh2395.now.sh/"
+                target="_blank"
                 class="overlay"
               ></a>
             </div>
@@ -701,6 +717,7 @@
               />
               <a
                 href="https://quack-book.vercel.app/"
+                target="_blank"
                 class="project-link position-absolute"
                 >Quackbook</a
               >
@@ -708,7 +725,11 @@
                 <p>Ngôn ngữ: HTML, CSS, JS</p>
                 <p>Nền tảng: ReactJs, Redux, Nodejs, MongoDB, Websocket.</p>
               </div>
-              <a href="https://quack-book.vercel.app/" class="overlay"></a>
+              <a
+                href="https://quack-book.vercel.app/"
+                target="_blank"
+                class="overlay"
+              ></a>
             </div>
           </div>
         </div>
