--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <a class="nav-link" href="#exp">Kinh nghiệm</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#pet-project">Pet project</a>
+                  <a class="nav-link" href="#pet-project">Pet projects</a>
                 </li>
               </ul>
             </div>
@@ -494,7 +494,7 @@
               <h3 class="h3 text-uppercase font-weight-bold mb-3">
                 <a href="#pet-project" class="text-link">
                   <i class="fas fa-link anchor-icon"></i>
-                  <span> Pet project </span>
+                  <span> Pet projects </span>
                 </a>
               </h3>
             </div>
