Cv: add rn pokedex project

--- a/index.html
+++ b/index.html
@@ -513,8 +513,7 @@
                 >Calculator</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: JQuery, Bootstrap</p>
+                <p>Nền tảng: HTML, CSS, Javascript, JQuery, Bootstrap</p>
               </div>
               <a
                 href="https://cody0203.github.io/dom-projects/calculator-basics/"
@@ -550,8 +549,7 @@
                 >Marvel Memory Card</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: JQuery, Bootstrap</p>
+                <p>Nền tảng: HTML, CSS, Javascript, JQuery, Bootstrap</p>
               </div>
               <a
                 href="https://cody0203.github.io/memory-card/index.html"
@@ -575,7 +573,7 @@
               >
 
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
+                <p>Nền tảng: HTML, CSS, Javascript</p>
               </div>
               <a
                 href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html"
@@ -598,8 +596,7 @@
                 >Login/Register Form</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: JQuery, Bootstrap</p>
+                <p>Nền tảng: HTML, CSS, Javascript, JQuery, Bootstrap</p>
               </div>
               <a
                 href="https://cody0203.github.io/dom-projects/form/html/index.html"
@@ -622,8 +619,7 @@
                 >Kanban board</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: JQuery, Bootstrap</p>
+                <p>Nền tảng: HTML, CSS, Javascript, JQuery, Bootstrap</p>
               </div>
               <a
                 href="https://cody0203.github.io/kanban-project/"
@@ -650,8 +646,10 @@
                 ></a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: JQuery, SASS, Bootstrap, PugJs</p>
+                <p>
+                  Nền tảng: HTML, CSS, Javascript, JQuery, SASS, Bootstrap,
+                  PugJs
+                </p>
               </div>
               <a
                 href="https://cody0203.github.io/obo-stadium/"
@@ -674,8 +672,7 @@
                 >Javascript Quizzes</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: ReactJs</p>
+                <p>Nền tảng: HTML, CSS, Javascript, ReactJs</p>
               </div>
               <a
                 href="https://react-quiz-8c392.firebaseapp.com/"
@@ -698,8 +695,7 @@
                 >Crwn Clothings</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: ReactJs, Redux, Firebase</p>
+                <p>Nền tảng: HTML, CSS, Javascript, ReactJs, Redux, Firebase</p>
               </div>
               <a
                 href="https://crwn-clothings.congdinh2395.now.sh/"
@@ -722,11 +718,38 @@
                 >Quackbook</a
               >
               <div class="technology text-center text">
-                <p>Ngôn ngữ: HTML, CSS, JS</p>
-                <p>Nền tảng: ReactJs, Redux, Nodejs, MongoDB, Websocket.</p>
+                <p>
+                  Nền tảng: HTML, CSS, Javascript, ReactJs, Redux, Webpack,
+                  Nodejs, MongoDB, Websocket.
+                </p>
               </div>
               <a
                 href="https://quack-book.vercel.app/"
+                target="_blank"
+                class="overlay"
+              ></a>
+            </div>
+
+            <div class="project-item project-ten position-relative">
+              <div class="number-order text">10.</div>
+              <img
+                src="cv/image/rn-pokedex.png"
+                alt="Quackbook"
+                class="project-img project-img-ten img-fluid my-5 rounded-lg"
+              />
+              <a
+                href="https://github.com/cody0203/RN-pokedex"
+                target="_blank"
+                class="project-link position-absolute"
+                >RN Pokédex</a
+              >
+              <div class="technology text-center text">
+                <p>
+                  Nền tảng: Javascript, React Native, Expo CLI, Redux, Nodejs.
+                </p>
+              </div>
+              <a
+                href="https://github.com/cody0203/RN-pokedex"
                 target="_blank"
                 class="overlay"
               ></a>
