Cv: Update skill

--- a/index.html
+++ b/index.html
@@ -253,16 +253,19 @@
 
                 <ul>
                   <li>
-                    <span class="label font-weight-bold">Ngôn ngữ:</span> HTML,
-                    CSS, Javascript.
+                    <span class="label font-weight-bold">Frontend:</span> HTML,
+                    CSS, Sass, Javascript, Jquery, ReactJs, React Native, Redux,
+                    Bootstrap, Materialize, Ant Design, NativeBase.
                   </li>
 
                   <li>
-                    <span class="label font-weight-bold"
-                      >Thư viện và framework:</span
-                    >
-                    Jquery, Bootstrap, Materialize, Sass, ReactJs, React Native,
-                    Redux, Webpack.
+                    <span class="label font-weight-bold">Backend:</span> Nodejs,
+                    ExpressJs.
+                  </li>
+
+                  <li>
+                    <span class="label font-weight-bold">Database:</span>
+                    MongoDB.
                   </li>
                 </ul>
               </div>
